Cycles oneAPI: Incorrect rendering of "Window" texture coordinate. #118713

Closed
opened 2024-02-25 08:15:55 +01:00 by Alaska · 2 comments
Member

System Information
Operating system: Linux-6.6.0-14-generic-x86_64-with-glibc2.39 64 Bits, WAYLAND UI
Graphics card: Mesa Intel(R) Arc(tm) A750 Graphics (DG2) Intel 4.6 (Core Profile) Mesa 24.0.1-1ubuntu1

Blender Version
Broken version: 3.6.9
Broken version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-24 23:01, hash: 0f266ca3c99c
Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-02-24 23:03, hash: 0a2544f2e8c8
Worked: 3.6.0 to 3.6.8, 4.0.2

Short description of error
When using a certain material in Cycles in oneAPI, rendering artifacts occur. The material is this (Anything making use of the Window texture coordinate option):
oneAPI culprit material.png

And in complex scenes, it creates results like this:

3.6.0 (Working) 3.6.9 (Broken) 4.1 (Broken) 4.2 (Broken)
cycles_spring_3.6.0_ONEAPI_0.png cycles_spring_3.6.9_ONEAPI_0.png cycles_spring_4.1 - 0f266ca3c99c_ONEAPI_0.png cycles_spring_4.2 - 0a2544f2e8c8_ONEAPI_0.png

Note: The glowing hand in the 3.6.0 result is caused by something else, and appears on all/most backends. I have already created a bug report for this.

Exact steps for others to reproduce the error
Option 1:

  1. Download the Spring scene from the Blender foundation demo list: https://www.blender.org/download/demo-files/
  2. Render it with oneAPI and compare it to other backends (E.G. CPU).

Option 2:

  1. Create a scene that uses material that makes use of the Window texture coordinate option. Simple oneAPI issue scene.blend
  2. Render it with oneAPI and compare it to other backends (E.G. CPU).

Extra notes:

  • I could not reproduce this issue on CPU or Metal GPU rendering. I haven't tested HIP or CUDA, but they likely do not have this issue.
  • I believe this issue may be Linux specific. But I have not tested Windows yet to confirm or deny this.
**System Information** Operating system: Linux-6.6.0-14-generic-x86_64-with-glibc2.39 64 Bits, WAYLAND UI Graphics card: Mesa Intel(R) Arc(tm) A750 Graphics (DG2) Intel 4.6 (Core Profile) Mesa 24.0.1-1ubuntu1 **Blender Version** Broken version: 3.6.9 Broken version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-24 23:01, hash: `0f266ca3c99c` Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-02-24 23:03, hash: `0a2544f2e8c8` Worked: 3.6.0 to 3.6.8, 4.0.2 **Short description of error** When using a certain material in Cycles in oneAPI, rendering artifacts occur. The material is this (Anything making use of the `Window` texture coordinate option): ![oneAPI culprit material.png](/attachments/3c3b2df8-78e2-4d16-b464-9fbef3560e7a) And in complex scenes, it creates results like this: |3.6.0 (Working)|3.6.9 (Broken)|4.1 (Broken)|4.2 (Broken)| |-|-|-|-| |![cycles_spring_3.6.0_ONEAPI_0.png](/attachments/cd3b0e05-83e1-41dd-894f-6afd8fb23d6d)|![cycles_spring_3.6.9_ONEAPI_0.png](/attachments/ad73d9c0-eb59-4d27-b815-c4a49a40c071)|![cycles_spring_4.1 - 0f266ca3c99c_ONEAPI_0.png](/attachments/a09162ac-f410-4b12-a5c1-de0c4aed9ec1)|![cycles_spring_4.2 - 0a2544f2e8c8_ONEAPI_0.png](/attachments/c0e2881a-8c71-42db-91d8-5d80bf88505a)| Note: The glowing hand in the 3.6.0 result is caused by something else, and appears on all/most backends. I have already created a bug report for this. **Exact steps for others to reproduce the error** Option 1: 1. Download the Spring scene from the Blender foundation demo list: https://www.blender.org/download/demo-files/ 2. Render it with oneAPI and compare it to other backends (E.G. CPU). Option 2: 1. Create a scene that uses material that makes use of the `Window` texture coordinate option. [Simple oneAPI issue scene.blend](/attachments/35faac9a-ab56-403f-8bfd-7cad39e41d37) 2. Render it with oneAPI and compare it to other backends (E.G. CPU). Extra notes: - I could not reproduce this issue on CPU or Metal GPU rendering. I haven't tested HIP or CUDA, but they likely do not have this issue. - I believe this issue may be Linux specific. But I have not tested Windows yet to confirm or deny this.
Alaska added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2024-02-25 08:15:55 +01:00
Author
Member

The most likely culprit to me is: f7ca183ff6

If this is the case, then the issue is most likely with the Intel compiler, not Cycles. Although I haven't tested to verify if this is the cause.

CC @xavierh just in case.

The most likely culprit to me is: https://projects.blender.org/blender/blender/commit/f7ca183ff6a0f5a4bbd574ffb66935a2f3cea6c0 If this is the case, then the issue is most likely with the Intel compiler, not Cycles. Although I haven't tested to verify if this is the cause. CC @xavierh just in case.
Member

Thanks for this report @Alaska
I confirm the compiler update is the culprit and a newer version fixes it already.
I'll open a PR tomorrow to get it updated.

edit: I also confirm the issue is absent on Windows.

Thanks for this report @Alaska I confirm the compiler update is the culprit and a newer version fixes it already. I'll open a PR tomorrow to get it updated. edit: I also confirm the issue is absent on Windows.
Xavier Hallade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-02-27 20:11:03 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-28 18:24:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118713
No description provided.